# loshifacer

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  gqlQueries.py  index.mjs  legwork.py  osh  osh_tool.py  package.json  prepare-osh.sh  pyproject.toml
.github/workflows/: publish.yml
lib/: gqlQueries.mjs  legwork.mjs
loshifacer/: cronjob.py  gqlQueries.py  legwork.py  osh_tool.py
src/: cronjob.py  legwork.py  osh_tool.py
