[tool.poetry]
name = "loshifacer"
version = "0.1.0"
description = "Import LOSH metadata to zenflows"
authors = ["matteo-cristino <cristino.matteo97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
toml = "^0.10.2"
python-gitlab = "^3.10.0"
zenroom = "^2.1.0.dev"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
