[tool.poetry]
name = "loshifacer"
version = "0.1.0"
description = "Import LOSH metadata to zenflows"
authors = ["matteo-cristino <cristino.matteo97@gmail.com>"]

[tool.poetry.scripts]
ingestion = "loshifacer.legwork:main"
cronjob = "loshifacer.cronjob:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
toml = "^0.10.2"
zenroom = "^2.16.3"
GitPython = "^3.1.27"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
